--- a/scss/public.scss
+++ b/scss/public.scss
@@ -32,44 +32,108 @@ body {
 .top {
   display: inline-block;
   width: 100%;
-  position: relative;
+  @include clearfix();
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 99;
 
   .menuboxs {
     display: inline-block;
-    width: 100%;
-    max-width: 990px;
+    width: calc(100% - 336px - 242px);
     @include clearfix();
-    
-    // d
-    height: 100px;
-    border: 1px solid rgba(255, 0, 0, .3);
+    padding-top: 30px;
+    margin-left: -30px;
 
     div {
       display: inline-block;
       width: calc(100% / 6);
       float: left;
-
+      
       a {
-        
+        display: inline-block;
+        widows: 100%;
+        font-size: 1.1rem;
+        color: white;
+        text-decoration: none;
+        line-height: 63px;
+        background-image: none;
+        @include transition(all, .3s);
+
+        &:hover {
+          cursor: pointer;
+          background-image: url(../img/menu_bg.png);
+          background-repeat: no-repeat;
+          display: inline-block;
+          height: 63px;
+          width: 144px;
+        }
       }
     }
   }
 
-  .Ll {
+  .Ll, .Rl {
     direction: inline-block;
-    position: absolute;
-    top: 0;
-    left: 0;
+    width: 100%;
+  }
+
+  .Ll {
+    max-width: 336px;
+    float: left;
   }
 
   .Rl {
-    direction: inline-block;
-    position: absolute;
-    top: 0;
-    right: 0;
+    max-width: 242px;
+    float: right;
   }
 }
 
+
+.cent {
+  display: inline-block;
+  width: 100%;
+  position: absolute;
+  top: 10px;
+  left: 0;
+  z-index: 88;
+  @include clearfix();
+
+
+  .C_boxs {
+    display: inline-block;
+    width: calc(100% - 249px - 838px);
+    position: relative;
+
+    .title_boxs {
+      display: inline-block;
+      width: 100%;
+      position: absolute;
+      top: 255px;
+      left: -140px;
+
+      img {
+        width: 100%;
+        max-width: 600px;
+      }
+    }
+  }
+
+  .CL, .CR {
+    display: inline-block;
+    width: 100%;
+  }
+
+  .CL {
+    max-width: 249px;
+    float: left;
+  }
+  .CR {
+    max-width: 838px;
+    float: right;
+  }
+
+
+}
 
 
 
