--- a/scss/public.scss
+++ b/scss/public.scss
@@ -17,7 +17,7 @@ body {
   padding: 0;
   color: rgba(90, 90, 90, 1.00);
 
-  font-size: medium;
+  font-size: 12px;
   text-align: center;
   font-family: "微軟正黑體", "Open sans", "Helvetica Neue", HelveticaNeue, Helvetica, Arial, sans-serif;
 
@@ -28,7 +28,7 @@ body {
 }
 
 
-
+// 首頁框架
 .top {
   display: inline-block;
   width: 100%;
@@ -125,8 +125,182 @@ body {
       max-width: 1250px;
     }
   }
-
 }
+
+.footer {
+  display: inline-block;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  background-image: url(../img/f_bg.png); 
+  background-repeat: repeat-x;
+  background-position: left bottom;
+  @include clearfix();
+
+  .fboxs {
+    display: inline-block;
+    width: calc(100% - 166px - 233px - 40px);
+    margin: 0 10px 0 30px;
+
+    .f_types {
+      display: inline-block;
+      width: 100%;
+      @include clearfix();
+      text-align: left;
+      padding-top: 10px;
+
+      .f_tl, .f_tr {
+        display: inline-block;
+        padding: 0;
+        margin: 0;
+        color: white;
+        font-size: .9rem;
+        float: left;
+      }
+
+      .f_tl {
+        width: 10%;
+        font-weight: 600;
+      }
+
+      .f_tr {
+        width: 90%;
+      }
+    }
+  }
+
+  .fL, .fR {
+    direction: inline-block;
+    width: 100%;
+  }
+
+  .fL {
+    max-width: 166px;
+    float: left;
+  }
+  .fR {
+    max-width: 233px;
+    float: right;
+  }
+}
+
+
+// 內頁框架
+.p_top {
+  display: inline-block;
+  width: 100%;
+  @include clearfix();
+  padding: 10px 0 20px 10px;
+
+  .pt_L {
+    display: inline-block;
+    width: 100%;
+    max-width: 200px;
+    float: left;
+
+    a {
+      display: inline-block;
+      width: 100%;
+      cursor: pointer;
+      outline: 0;
+
+      img {
+        display: inline-block;
+        width: 100%;
+        max-width: 200px;
+      }
+    }
+  }
+
+  .pt_C {
+    display: inline-block;
+    width: calc(100% - 200px - 200px);
+    // max-width: 990px;
+    float: left;
+    @include clearfix();
+
+    .pt_icon_boxs {
+      display: inline-block;
+      float: right;
+
+      a {
+        display: inline-block;
+        content: '';
+        widows: 100%;
+        font-size: 1.1rem;
+        line-height: 70px;
+        color: white;
+        text-decoration: none;
+      }
+    }
+
+    .pt_menu_boxs {
+      display: inline-block;
+      width: 100%;
+
+      .pt_menu {
+        display: inline-block;
+        width: calc(90% / 6);
+
+        a {
+          display: inline-block;
+          widows: 100%;
+          font-size: 1rem;
+          color: white;
+          text-decoration: none;
+          line-height: 44px;
+          background-image: none;
+          @include transition(all, .3s);
+
+          &:hover {
+            cursor: pointer;
+            background-image: url(../img/menu_bg.png);
+            background-repeat: no-repeat;
+            display: inline-block;
+            height: 44px;
+            width: 100px;
+          }
+        }
+      }
+    }
+  }
+
+  .pt_R {
+    display: inline-block;
+    width: 100%;
+    max-width: 200px;
+    float: right;
+    @include clearfix();
+
+    img {
+      display: inline-block;
+      width: 100%;
+      max-width: 200px;
+      float: right;
+    }
+  }
+}
+
+.p_cent {
+  display: inline-block;
+  width: 100%;
+  // min-height: 900px;
+  background-image:url(../img/Group2.png);
+  background-repeat:no-repeat;
+  background-size: cover;
+  margin-bottom: 30px;
+
+  .pc_boxs {
+    display: inline-block;
+    width: 100%;
+    max-width: 990px;
+    min-height: 800px;
+    background-color: rgba(248, 242, 222, 1.00);
+  }
+}
+
+.p_footer {}
 
 
 
