--- a/scss/public.scss
+++ b/scss/public.scss
@@ -12,7 +12,8 @@ body {
 
   display: inline-block;
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  // height: 100vh;
 
   margin: 0;
   padding: 0;
@@ -312,7 +313,6 @@ body {
 }
 
 
-
 .i_cent_boxs {
   display: inline-block;
   width: 100%;
@@ -349,6 +349,53 @@ body {
 }
 
 
+.cent_boxs {
+  display: inline-block;
+  width: 100%;
+  background-image:url(../img/page_bg.png);
+  background-repeat:no-repeat;
+  background-size: 90%;
+  background-position: center center;
+  margin: 30px 0;
+
+  @include range-width(1350px, 1990px) {
+    background-size: 80%;
+  }
+
+  @include range-width(890px, 1350px) {
+    background-size: 90%;
+  }
+
+  @include range-width(0, 890px) {
+    margin: 0;
+    background-size: cover;
+  }
+
+  .cent_box {
+    display: inline-block;
+    width: 100%;
+    max-width: calc(880px - 40px);
+    min-height: 800px;
+    background-color: rgba(248, 242, 222, 1.00);
+    @include border-radius(4px);
+    margin: 0 20px;
+    padding: 20px;
+
+    @include range-width(1350px, 1990px) {
+      max-width: calc(1000px - 40px);
+    }
+
+    @include range-width(890px, 1350px) {
+      max-width: calc(900px - 40px);
+    }
+
+    @include range-width(0, 890px) {
+      max-width: calc(100% - 40px);
+    }
+  }
+}
+
+
 .in_footer {
   display: inline-block;
   max-width: 900px;
@@ -356,6 +403,10 @@ body {
   margin: 0 auto;
   padding-bottom: 20px;
   margin-top: -60px;
+
+  &.no_ma {
+    margin-top: 20px;
+  }
 
   @include range-width(768px, 1080px) {
     max-width: 660px;
@@ -423,8 +474,172 @@ body {
   }
 }
 
+.page_cent {
+  display: inline-block;
+  width: 100%;
+}
+
+.tag_boxs {
+  display: inline-block;
+  width: 100%;
+  text-align: left;
+  padding-bottom: 20px;
+}
+
+.tag_a {
+  display: inline-block;
+  color: rgba(74, 128, 147, 1.00);
+  font-size: .9;
+  text-decoration: none;
+  cursor: pointer;
+
+  &:hover {
+    color: rgba(235, 0, 139, 1.00);
+
+    &:after {
+      color: rgba(74, 128, 147, 1.00);
+    }
+  }
+
+  &:after {
+    display: inline-block;
+    content: '>';
+    padding: 0 10px;
+  }
+
+  &:last-child {
+    &:after {
+      display: none;
+    }
+  }
+}
+
+.news_box {
+  display: inline-block;
+  width: 100%;
+  border-bottom: 2px dotted rgba(192, 143, 71, 1.00); 
+  padding: 15px 0;
+  @include clearfix();
+  
+
+  .n_date {
+    display: inline-block;
+    background-color: rgba(192, 143, 71, 1.00);
+    font-size: 1rem;
+    @include border-radius(30px);
+    padding: 5px 10px;
+    color: white;
+    float: left;
+
+    @include range-width(0, 450px) {
+      font-size: .9rem;
+      padding: 5px 10px;
+    }
+  }
+
+  .n_titel {
+    display: inline-block;
+    cursor: pointer;
+    float: left;
+    font-size: 1rem;
+    color: rgba(192, 143, 71, 1.00);
+    font-weight: 600;
+    padding: 0;
+    margin: 0 0 0 30px;
+    line-height: 20px;
 
 
+    &:hover, &:active {
+      color: rgba(235, 0, 139, 1.00);
+    }
+
+    &.n_outlink {
+      width: calc(100% - 165px);
+      text-decoration: none;
+      text-align: left;
+      padding-top: 8px;
+
+      @include range-width(0, 450px) {
+        width: 100%;
+      }
+    }
+
+    @include range-width(0, 450px) {
+      width: 100%;
+      text-align: left;
+      margin: 0;
+      line-height: 25px;
+      padding-top: 10px;
+    }
+  }
+
+  .n_content {
+    display: none;
+
+    &.show_co {
+      display: inline-block;
+    }
+    
+    width: 100%;
+    padding: 15px 0;
+    border-top: 1px solid rgba(145, 96, 157, 1.00);
+    margin-top: 15px;
+    text-align: left;
+
+    p {
+      display: inline-block;
+      padding: 0 10px;
+      margin: 0;
+      color: rgba(23, 23, 23, 1.00);
+      font-size: 18px;
+      line-height: 30px;
+    }
+  }
+
+  .plan_boxs {
+    display: inline-block;
+    float: left;
+
+    &:after {
+      display: inline-block;
+      content: "│";
+      padding: 0 10px;
+      font-size: 24px;
+      color: rgba(145, 96, 157, 1.00);
+
+      @include range-width(450px, 1090px) {
+        font-size: 18px;
+      }
+
+      @include range-width(0, 450px) {
+        font-size: 15px;
+      }
+    }
+
+    a {
+      display: inline-block;
+      cursor: pointer;
+      font-size: 24px;
+      color: rgba(145, 96, 157, 1.00);
+      text-decoration: none;
+      margin-bottom: 10px;
+      @include transition(all .3s);
+
+      @include range-width(450px, 1090px) {
+        font-size: 18px;
+      }
+
+      @include range-width(0, 450px) {
+        font-size: 15px;
+      }
+
+      &:hover, &:active, &.plan_ok {
+        color: rgba(83, 30, 120, 1.00);
+        font-weight: 600;
+      }
+    }
+  }
+} 
 
 
 
